# c3-godot-docs-generator

./: .flake8  .git-blame-ignore-revs  CLAUDE.md  README.md  pyproject.toml
c3_godot_docs_gen/: bbcode.py  cli.py  model.py  parse.py  render.py  resolve.py
tests/: conftest.py  test_bbcode.py  test_cli.py  test_model.py  test_parse.py  test_render.py  test_resolve.py
tests/fixtures/xml/: C3Http.CancellationToken.xml  C3Http.Mock.xml  C3Http.Options.xml  C3Http.RequestError.xml  C3Http.Response.xml  C3Http.Session._PoolEntry.xml  C3Http.Session.xml  C3Http._Impl._ParsedURL.xml  C3Http._Impl.xml  C3Http._Stub.xml  C3Http.xml
