[tool.poetry]
name = "c3-godot-docs-gen"
version = "0.1.0"
description = "Converts Godot doctool XML class references into Markdown documentation."
authors = ["ChrisCrossCrash <chrislkumm@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "c3_godot_docs_gen"}]
repository = "https://github.com/ChrisCrossCrash/c3-godot-docs-generator"

[tool.poetry.scripts]
c3-godot-docs-gen = "c3_godot_docs_gen.cli:main"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1"
flake8 = "^7.0"
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
